bk_ida/gccida/c3/gcse_main
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gcse_main/src/gcse.c:1190:1: error: use of undeclared identifier 'reg_set_0'; did you mean 'reg_set_p'?
reg_set_0 **v20; // r15 
^~~~~~~~~
reg_set_p
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gcse_main/src/rtl.h:1469:12: note: 'reg_set_p' declared here
extern int reg_set_p                    PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gcse_main/src/gcse.c:1190:13: error: use of undeclared identifier 'v20'; did you mean 'v10'?
reg_set_0 **v20; // r15 
            ^~~
            v10
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gcse_main/src/gcse.c:1180:7: note: 'v10' declared here
char *v10; // rax 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gcse_main/src/gcse.c:1190:11: error: invalid operands to binary expression ('int (rtx, rtx)' (aka 'int (struct rtx_def *, struct rtx_def *)') and 'char')
reg_set_0 **v20; // r15 
~~~~~~~~~ ^~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gcse_main/src/gcse.c:1197:4: error: expected ';' after expression
rtx v27; // r11 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gcse_main/src/gcse.c:1197:5: error: use of undeclared identifier 'v27'
rtx v27; // r11 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gcse_main/src/gcse.c:1203:1: error: use of undeclared identifier 'reg_set_0'; did you mean 'reg_set_p'?
reg_set_0 *v33; // rsi 
^~~~~~~~~
reg_set_p
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gcse_main/src/rtl.h:1469:12: note: 'reg_set_p' declared here
extern int reg_set_p                    PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gcse_main/src/gcse.c:1203:12: error: use of undeclared identifier 'v33'
reg_set_0 *v33; // rsi 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gcse_main/src/gcse.c:1214:1: error: use of undeclared identifier 'reg_set_0'; did you mean 'reg_set_p'?
reg_set_0 *v44; // rdi 
^~~~~~~~~
reg_set_p
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gcse_main/src/rtl.h:1469:12: note: 'reg_set_p' declared here
extern int reg_set_p                    PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gcse_main/src/gcse.c:1214:12: error: use of undeclared identifier 'v44'
reg_set_0 *v44; // rdi 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gcse_main/src/gcse.c:1219:1: error: use of undeclared identifier 'reg_set_0'; did you mean 'reg_set_p'?
reg_set_0 *v49; // rsi 
^~~~~~~~~
reg_set_p
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gcse_main/src/rtl.h:1469:12: note: 'reg_set_p' declared here
extern int reg_set_p                    PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gcse_main/src/gcse.c:1219:12: error: use of undeclared identifier 'v49'
reg_set_0 *v49; // rsi 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gcse_main/src/gcse.c:1275:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v105; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gcse_main/src/gcse.c:1286:4: error: expected ';' after expression
rtx v116; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gcse_main/src/gcse.c:1286:5: error: use of undeclared identifier 'v116'
rtx v116; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gcse_main/src/gcse.c:1288:4: error: expected ';' after expression
rtx v118; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gcse_main/src/gcse.c:1288:5: error: use of undeclared identifier 'v118'
rtx v118; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gcse_main/src/gcse.c:1293:6: error: use of undeclared identifier 'fld'
rtx *fld; // rbp 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gcse_main/src/gcse.c:1295:4: error: expected ';' after expression
rtx v125; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gcse_main/src/gcse.c:1295:5: error: use of undeclared identifier 'v125'
rtx v125; // r14 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gcse_main/src/obj/gcse.o] Error 1
